--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "eslint-plugin-react": "^7.37.5",
     "fast-equals": "^5.3.2",
     "fast-memoize": "^2.5.2",
-    "in-publish": "^2.0.1",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
     "mem": "^10.0.0",
@@ -93,10 +92,9 @@
     "dist": "npm run clean && npm run build",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src/*.ts --max-warnings 0",
     "lint:fix": "ESLINT_USE_FLAT_CONFIG=false npm run lint -- --fix",
-    "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
     "release": "release-it",
     "release:beta": "release-it --config=.release-it.beta.json",
+    "release:scripts": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
     "start": "npm run dev",
     "test": "vitest run --config=config/vitest.config.ts",
     "test:coverage": "npm run test -- --coverage",
