--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "url": "git+https://github.com/planttheidea/micro-memoize.git"
   },
   "scripts": {
-    "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
+    "benchmark": "npm run clean:esm && npm run build:esm && node benchmark/index.js",
     "build": "npm run clean && npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:min",
     "build:cjs": "NODE_ENV=production rollup -c config/rollup/config.cjs.js && tsc -p config/tsconfig/cjs.json && node scripts/create-cts-files.js",
     "build:esm": "NODE_ENV=production rollup -c config/rollup/config.esm.js && tsc -p config/tsconfig/esm.json && node scripts/create-mts-files.js",
