--- a/.release-it.beta.json
+++ b/.release-it.beta.json
@@ -2,11 +2,16 @@
   "github": {
     "release": true
   },
+  "hooks": {
+    "before:init": [
+      "npm run typecheck",
+      "npm run lint",
+      "npm run test",
+      "npm run build"
+    ]
+  },
   "npm": {
     "tag": "next"
   },
-  "preReleaseId": "beta",
-  "scripts": {
-    "beforeStart": "npm run prepublish:compile"
-  }
+  "preReleaseId": "beta"
 }
